Change la fonction : transforme_en_tableau pour être plus lisible et vide

--- a/public/html/02_formulaire.html
+++ b/public/html/02_formulaire.html
@@ -1,4 +1,17 @@
 <html>
+<head>
+  <title>Ma première page avec du style</title>
+  <style type="text/css">
+  body {
+    color: purple;
+    background-color: #d8da3d }
+
+    td{
+    	border:2px solid black;
+    }
+  </style>
+    }
+</head>
  <body>
  <form action = "http://127.0.0.1:8081/traiter_get" method = "GET">
  Prénom: <input type = "text" name = "prenom"> <br></br>
@@ -6,7 +19,6 @@
  Téléphone: <input type = "text" name = "tel"> <br></br>
  Courriel: <input type = "text" name = "mail"> <br></br>
  <input type = "submit" value = "Submit">
-
  </form>
  </body>
 </html>
