--- a/public/html/02_formulaire.html
+++ b/public/html/02_formulaire.html
@@ -4,13 +4,18 @@
   <style type="text/css">
   body {
     color: purple;
-    background-color: #d8da3d }
+    background-color: #EFF5FB }
 
-    td{
-    	border:2px solid black;
+    form{
+    	color:#2f4591;
+    	border:2px solid #2f4591;
+    	margin: auto;
+    	text-align: center;
+    	width: 400px;
+    	margin-top: 200px;
     }
   </style>
-    }
+    
 </head>
  <body>
  <form action = "http://127.0.0.1:8081/traiter_get" method = "GET">
